Fix overflow, updated Recipes component

--- a/src/assets/list.css
+++ b/src/assets/list.css
@@ -49,6 +49,7 @@
     padding-bottom: 10px;
     margin-top: 20px;
     font-size: large;
+    font-weight: b;
 }
 
 .list-item:hover {
