--- a/src/assets/search.css
+++ b/src/assets/search.css
@@ -4,7 +4,6 @@
 }
 
 .search-field {
-  min-width: 470px;
   height: 45px;
   text-align: left;
   flex-grow: 1;
